--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,6 +38,7 @@ $primary-color               	: $black;
 $success-color               	: #2ecc71;
 $warning-color               	: #f1c40f;
 $danger-color                	: #e74c3c;
+$magenta-color                  : #FF55A3;
 $info-color                  	: #3498db;
 
 $table-border-color          	: $border-color;
