--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
-    {% if page.excerpt %}<meta name="description" content="{{ page.excerpt | strip_html }}">{% endif %}
-    {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
-    {% if page.author %}
-      {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %}
-    {% endif %}
-    {% include open-graph.html %}
+    {% if page.excerpt %}
+    <meta name="description" content="{{ page.excerpt | strip_html }}">{% endif %} {% if page.tags %}
+    <meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %} {% if page.author %} {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %} {% endif %} {% include open-graph.html %}
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
@@ -27,21 +25,20 @@
       <script src="{{ site.url }}/js/vendor/respond.min.js"></script>
     <![endif]-->
 
-  </head>
+</head>
 
-  <body id="js-body">
-    {% include browser-upgrade.html %}
-    {% include header.html %}
-    {% include navigation-sliding.html %}
+<body id="js-body">
+    {% include browser-upgrade.html %} {% include header.html %} {% include navigation-sliding.html %} 
+    {% if page.url == "/" %} {% include hero.html %} {% endif %}
 
     <div id="page-wrapper">
-      {{ content }}
-      {% include footer.html %}
+        {{ content }} {% include footer.html %}
     </div>
+
 
     <script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"></script>
     <script src="{{ site.url }}/js/main.js"></script>
 
-  </body>
+</body>
 
 </html>
