--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<div style="width:100%; display:table; height: 60vh; background-image: url({{ site.url }}/images/head2.JPG); background-size:cover; background-repeat: no-repeat; background-position: 60% center;">
+<div style="width:100%; display:table; height: 60vh; background-image: url({{ site.url }}/images/head2.jpg); background-size:cover; background-repeat: no-repeat; background-position: 60% center;">
     <div style="display: table-cell; vertical-align: middle;">
         <div class="header-container" style="max-width:68em; margin-right: auto; margin-left: auto;">
                 <h1 style="margin-left: 20px; color: #FF55A3; font-size: 4rem;">
