--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<div style="width:100%; display:table; height: 60vh; background-image: url({{ site.url }}/images/head2.jpg); background-size:cover; background-repeat: no-repeat; background-position: 60% center;">
+<!--<div style="width:100%; display:table; height: 60vh; background-image: url({{ site.url }}/images/head2.jpg); background-size:cover; background-repeat: no-repeat; background-position: 60% center;">
     <div style="display: table-cell; vertical-align: middle;">
         <div class="header-container" style="max-width:68em; margin-right: auto; margin-left: auto;">
                 <h1 style="margin-left: 20px; color: #FF55A3; font-size: 4rem;">
@@ -10,4 +10,33 @@
             <h4 style="margin-left:20px; margin-top:-20px; color: #767676;">Design.</h4>
         </div>
     </div>
+</div>-->
+
+<div class="wrapper-normal">
+    <div class="header-home">
+        <a href="{{ site.url }}/about">
+            <img class="selfie" alt="Mona" src="{{ site.url }}/images/head2-tn.jpg">
+        </a>
+        <div class="social-links">
+            <a class="social" href="http://instagram.com/nmonarizqa">
+                <i class="fa fa-instagram">
+                </i>
+            </a>
+            <a class="social" href="http://medium.com/@nmonarizqa">
+                <i class="fa fa-medium">
+                </i>
+            </a>
+            <a class="social" href="mailto:nmonarizqa@windowslive.com">
+                <i class="fa fa-envelope">
+                </i>
+            </a>
+            <a class="social" href="http://linkedin.com/in/nmonarizqa">
+                <i class="fa fa-linkedin">
+                </i>
+            </a>
+        </div>
+        <p class="description">Data / Viz / Design</p>
+        
+    </div>
+    
 </div>
