--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,22 +1,8 @@
-<!--<div style="width:100%; display:table; height: 60vh; background-image: url({{ site.url }}/images/head2.jpg); background-size:cover; background-repeat: no-repeat; background-position: 60% center;">
-    <div style="display: table-cell; vertical-align: middle;">
-        <div class="header-container" style="max-width:68em; margin-right: auto; margin-left: auto;">
-                <h1 style="margin-left: 20px; color: #FF55A3; font-size: 4rem;">
-
-                Mona
-            </h1>
-            <h4 style="margin-left:20px; margin-top:-20px; color: #767676;">Data.</h4>
-            <h4 style="margin-left:20px; margin-top:-20px; color: #767676;">Viz.</h4>
-            <h4 style="margin-left:20px; margin-top:-20px; color: #767676;">Design.</h4>
-        </div>
-    </div>
-</div>-->
-
 <div class="wrapper-normal">
     <div class="header-home">
-        <a href="{{ site.url }}/about">
+        <div>
             <img class="selfie" alt="Mona" src="{{ site.url }}/images/head2-tn.jpg">
-        </a>
+        </div>
         <div class="social-links">
             <a class="social" href="http://instagram.com/nmonarizqa">
                 <i class="fa fa-instagram">
@@ -34,9 +20,13 @@
                 <i class="fa fa-linkedin">
                 </i>
             </a>
+            <a class="social" href="http://twitter.com/nmonarizqa">
+                <i class="fa fa-twitter">
+                </i>
+            </a>
         </div>
         <p class="description">Data / Viz / Design</p>
-        
+
     </div>
-    
+
 </div>
